# dxtrade-python-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  bridge_example.py  stream_market_data.py  websocket_streaming.py
src/dxtrade/: __init__.py  auth.py  client.py  config.py  env_config.py  errors.py  http.py  models.py  push.py  transport.py  utils.py
src/dxtrade/core/: __init__.py  http_client.py
src/dxtrade/rest/: __init__.py  accounts.py  base.py  instruments.py  orders.py  positions.py
src/dxtrade/types/: __init__.py  common.py  dxtrade_messages.py  trading.py  websocket.py
src/dxtrade/websocket/: __init__.py  stream_manager.py  unified_stream.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_http.py  test_models.py
